unhide PM app on trimui devices

--- a/App/PortMaster/config.json
+++ b/App/PortMaster/config.json
@@ -3,6 +3,6 @@
   "icon": "portmaster.png",
   "launch": "launch.sh",
   "description": "PortMaster Menu",
-  "devices": ["MIYOO_FLIP"],
+  "devices": ["MIYOO_FLIP", "TRIMUI_SMART_PRO", "TRIMUI_BRICK", "TRIMUI_SMART_PRO_S"],
   "hideInSimpleMode": false
 }
