--- a/Emu/GBA/config.json
+++ b/Emu/GBA/config.json
@@ -24,6 +24,25 @@
         "gpsp"
       ],
       "selected": "mgba",
+      "devices": [
+        "MIYOO_A30",
+        "MIYOO_FLIP",
+        "TRIMUI_SMART_PRO",
+        "TRIMUI_SMART_PRO_S",
+        "TRIMUI_BRICK"
+      ],
+      "overrides": {}
+    },
+    "Emulator_MiyooMini": {
+      "display": "Retroarch Core",
+      "options": [
+        "mgba",
+        "gpsp_v0.91"
+      ],
+      "selected": "mgba",
+      "devices": [
+        "MIYOO_MINI_FLIP"
+      ],
       "overrides": {}
     }
   },
