Add the standard gbsp core as an option for mm as well

--- a/Emu/GBA/config.json
+++ b/Emu/GBA/config.json
@@ -37,7 +37,8 @@
       "display": "Retroarch Core",
       "options": [
         "mgba",
-        "gpsp_v0.91"
+        "gpsp_v0.91",
+        "gpsp"
       ],
       "selected": "mgba",
       "devices": [
