Hide dreamcast, N64, and Ports, from miyoo mini

--- a/Emu/DC/config.json
+++ b/Emu/DC/config.json
@@ -54,5 +54,6 @@
   "type": "homeconsole",
   "releaseYear": 1998,
   "default_emulator": "flycast",
-  "scaling_min_freq": 1008000
+  "scaling_min_freq": 1008000,
+  "devices": ["TRIMUI_BRICK", "TRIMUI_SMART_PRO","TRIMUI_SMART_PRO_S", "MIYOO_A30", "MIYOO_FLIP"]
 }
