--- a/Emu/N64/config.json
+++ b/Emu/N64/config.json
@@ -63,5 +63,7 @@
   "type": "homeconsole",
   "releaseYear": 1996,
   "default_emulator": "km_ludicrousn64_2k22_xtreme_amped",
-  "scaling_min_freq": 1008000
+  "scaling_min_freq": 1008000,
+  "devices": ["TRIMUI_BRICK", "TRIMUI_SMART_PRO","TRIMUI_SMART_PRO_S", "MIYOO_A30", "MIYOO_FLIP"]
+
 }
