--- a/Emu/PORTS/config.json
+++ b/Emu/PORTS/config.json
@@ -33,5 +33,6 @@
   "type": "other",
   "releaseYear": 2000,
   "default_emulator": "sh",
-  "scaling_min_freq": 648000
+  "scaling_min_freq": 648000,
+  "devices": ["TRIMUI_BRICK", "TRIMUI_SMART_PRO","TRIMUI_SMART_PRO_S", "MIYOO_A30", "MIYOO_FLIP"]
 }
