PLATFORM.cfg: add SD_MOUNTPOINT per device

--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -12,6 +12,7 @@ export REQ_MB_TO_UPDATE_FW=48
 export SYSTEM_JSON="/mnt/SDCARD/Saves/a30-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/miyoo"
 export SD_DEV="/dev/mmcblk0p1"
+export SD_MOUNTPOINT="/mnt/SDCARD"
 export PLATFORM_ARCHITECTURE="armhf"
 
   ###################################
