--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -12,6 +12,7 @@ export REQ_MB_TO_UPDATE_FW=384
 export SYSTEM_JSON="/mnt/SDCARD/Saves/flip-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/miyoo355"
 export SD_DEV="/dev/mmcblk1p1"
+export SD_MOUNTPOINT="/mnt/sdcard"
 export PLATFORM_ARCHITECTURE="aarch64"
 
 
