--- a/spruce/scripts/platform/MiyooMini.cfg
+++ b/spruce/scripts/platform/MiyooMini.cfg
@@ -14,6 +14,7 @@ export REQ_MB_TO_UPDATE_FW=48
 export SYSTEM_JSON="/mnt/SDCARD/Saves/mini-flip-system.json"
 export SYSTEM_PATH="/customer/"
 export SD_DEV="/dev/mmcblk0p1"
+export SD_MOUNTPOINT="/mnt/SDCARD"
 export PLATFORM_ARCHITECTURE="armhf"
 
 
