--- a/spruce/scripts/platform/Brick.cfg
+++ b/spruce/scripts/platform/Brick.cfg
@@ -12,6 +12,7 @@ export REQ_MB_TO_UPDATE_FW=1280
 export SYSTEM_JSON="/mnt/SDCARD/Saves/trim-ui-brick-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/trimui"
 export SD_DEV="/dev/mmcblk1p1"
+export SD_MOUNTPOINT="/mnt/SDCARD"
 export PLATFORM_ARCHITECTURE="aarch64"
 
 
