remove unneeded get_sd_card_path() that was used in only one place and didn't make any difference; break out CONSERVATIVE_POLICY_DIR to each $PLATFORM.cfg; outline requirements to use cpu_control_functions.sh in a code comment

--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -34,6 +34,7 @@ export DEVICE_CORES_ONLINE=0123
 export DEVICE_SMART_FREQ=816000
 export DEVICE_PERF_FREQ=1800000
 export DEVICE_MAX_FREQ=1992000
+export CONSERVATIVE_POLICY_DIR=/sys/devices/system/cpu/cpu0/cpufreq/conservative
 
   ##################################################
 #####   OTHER HARDWARE FEATURES AND INTERFACES   #####
