--- a/spruce/scripts/platform/MiyooMini.cfg
+++ b/spruce/scripts/platform/MiyooMini.cfg
@@ -36,6 +36,7 @@ export DEVICE_CORES_ONLINE=01
 export DEVICE_SMART_FREQ=648000
 export DEVICE_PERF_FREQ=1344000
 export DEVICE_MAX_FREQ=1600000
+export CONSERVATIVE_POLICY_DIR="not applicable"
 
   ##################################################
 #####   OTHER HARDWARE FEATURES AND INTERFACES   #####
