--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -31,10 +31,10 @@ export DISPLAY_ASPECT_RATIO="16:9"
   ########################
 
 export DEVICE_CORES_ONLINE=4567
-export DEVICE_SLEEP_FREQ=1000
 export DEVICE_SMART_FREQ=1008000
 export DEVICE_PERF_FREQ=1992000
 export DEVICE_MAX_FREQ=2160000
+export CONSERVATIVE_POLICY_DIR=/sys/devices/system/cpu/cpufreq/conservative
 
   ##################################################
 #####   OTHER HARDWARE FEATURES AND INTERFACES   #####
