--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -33,6 +33,7 @@ export DEVICE_CORES_ONLINE=0123
 export DEVICE_SMART_FREQ=648000
 export DEVICE_PERF_FREQ=1344000
 export DEVICE_MAX_FREQ=1512000
+export CONSERVATIVE_POLICY_DIR=/sys/devices/system/cpu/cpufreq/conservative
 
   ##################################################
 #####   OTHER HARDWARE FEATURES AND INTERFACES   #####
