--- a/spruce/scripts/platform/Brick.cfg
+++ b/spruce/scripts/platform/Brick.cfg
@@ -34,6 +34,7 @@ export DEVICE_CORES_ONLINE=0123
 export DEVICE_SMART_FREQ=1008000
 export DEVICE_PERF_FREQ=1800000
 export DEVICE_MAX_FREQ=2000000
+export CONSERVATIVE_POLICY_DIR=/sys/devices/system/cpu/cpufreq/conservative
 
   ##################################################
 #####   OTHER HARDWARE FEATURES AND INTERFACES   #####
