Allow MiniFlip overclock speed to be set, default to 1600

--- a/Saves/spruce/spruce-config.json
+++ b/Saves/spruce/spruce-config.json
@@ -177,6 +177,17 @@
                     "512MB"
                 ],
                 "selected": "Off"
+            },
+            "overclockSpeed": {
+                "devices": ["MIYOO_MINI_FLIP"],
+                "display": "Overclock Speed",
+                "description": "Clockspeed to use for overclocking",
+                "options": [
+                    "1600",
+                    "1700",
+                    "1800"
+                ],
+                "selected": "1600"
             }
         },
         "Emulator Settings": {
