Fix SD_MOUNTPOINT path in SmartProS.cfg

--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -12,7 +12,7 @@ export REQ_MB_TO_UPDATE_FW=1280
 export SYSTEM_JSON="/mnt/SDCARD/Saves/trim-ui-smart-pro-s-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/trimui"
 export SD_DEV="/dev/mmcblk1p1"
-export SD_MOUNTPOINT="/mnt/sdcard/mmcblk1"
+export SD_MOUNTPOINT="/mnt/sdcard/mmcblk1p1"
 export PLATFORM_ARCHITECTURE="aarch64"
 
 
