--- a/Emu/DC/config/flycast/emu.cfg
+++ b/Emu/DC/config/flycast/emu.cfg
@@ -1,6 +1,12 @@
+[achievements]
+Enabled = no
+HardcoreMode = no
+Token = 
+UserName = 
+
 [audio]
 VmuSound = no
-backend = sdl2
+backend = auto
 
 [config]
 BoxartDisplayMode = yes
@@ -9,12 +15,12 @@ Debug.GDBPort = 3263
 Debug.GDBWaitForConnection = no
 Debug.SerialConsoleEnabled = no
 Debug.SerialPTY = no
+DiscordPresence = yes
 Dreamcast.AutoLoadState = yes
 Dreamcast.AutoSaveState = yes
 Dreamcast.Broadcast = 0
 Dreamcast.Cable = 3
 Dreamcast.ContentPath = /mnt/SDCARD/Roms/DC
-Dreamcast.ForceWindowsCE = no
 Dreamcast.HideLegacyNaomiRoms = yes
 Dreamcast.Language = 1
 Dreamcast.RamMod32MB = no
@@ -27,17 +33,18 @@ ForceFreePlay = yes
 PerGameVmu = no
 Profiler.DrawGUI = no
 Profiler.Enabled = no
-Profiler.FrameWarningTime = 0.018182
+Profiler.FrameWarningTime = 0.0181818
 Profiler.OutputTTY = no
 Sh4Clock = 200
-UIScaling = 100
+UIScaling = 70
 UploadCrashLogs = yes
+UsePhysicalVmuMemory = no
 UseReios = no
 aica.AutoLatency = no
 aica.BufferSize = 2822
 aica.DSPEnabled = no
 aica.Volume = 100
-pvr.AutoSkipFrame = 2
+pvr.AutoSkipFrame = 1
 pvr.MaxThreads = 3
 pvr.rend = 0
 rend.AnisotropicFiltering = 1
@@ -46,12 +53,14 @@ rend.CrossHairColor2 = 0
 rend.CrossHairColor3 = 0
 rend.CrossHairColor4 = 0
 rend.CrosshairSize = 40
+rend.CustomGpuDriver = no
 rend.CustomTextures = no
 rend.DelayFrameSwapping = yes
 rend.DumpTextures = no
 rend.DupeFrames = no
 rend.EmulateFramebuffer = no
-rend.ExtraDepthScale = 1.000000
+rend.ExtraDepthScale = 1
+rend.FixUpscaleBleedingEdge = yes
 rend.FloatVMUs = no
 rend.Fog = yes
 rend.MaxFilteredTextureSize = 256
@@ -64,7 +73,7 @@ rend.RenderToTextureBuffer = no
 rend.Resolution = 480
 rend.Rotate90 = no
 rend.ScreenStretching = 100
-rend.ShowFPS = yes
+rend.ShowFPS = no
 rend.SuperWideScreen = no
 rend.TextureFiltering = 0
 rend.TextureUpscale = 1
@@ -74,31 +83,36 @@ rend.UseMipmaps = yes
 rend.WideScreen = no
 rend.WidescreenGameHacks = no
 rend.vsync = yes
-ta.skip = 0
+ta.skip = 1
 
 [input]
 MouseSensitivity = 100
+VirtualGamepadTransparency = 37
 VirtualGamepadVibration = 20
 device1 = 0
 device1.1 = 1
 device1.2 = 1
-device2 = 0
-device2.1 = 1
-device2.2 = 1
-device3 = 0
-device3.1 = 1
-device3.2 = 1
-device4 = 0
-device4.1 = 1
-device4.2 = 1
+device2 = 10
+device2.1 = 10
+device2.2 = 10
+device3 = 10
+device3.1 = 10
+device3.2 = 10
+device4 = 10
+device4.1 = 10
+device4.2 = 10
 maple_sdl_joystick_0 = 0
 maple_sdl_keyboard = 0
 maple_sdl_mouse = 0
 
+[log]
+LogServer = 
+
 [network]
 ActAsServer = no
 BattleCable = no
-DNS = 46.101.91.123
+DCNet = no
+DNS = dns.flyca.st
 EmulateBBA = no
 Enable = no
 EnableUPnP = yes
@@ -108,6 +122,7 @@ GGPOChat = yes
 GGPOChatTimeout = 10
 GGPOChatTimeoutToggle = yes
 GGPODelay = 0
+ISPUsername = flycast1
 LocalPort = 37391
 MultiboardSlaves = 1
 NetworkOutput = no
