--- a/Emu/NAOMI/config.json
+++ b/Emu/NAOMI/config.json
@@ -16,7 +16,8 @@
       "display": "CPU Mode",
       "options": [
         "Performance",
-        "Overclock"
+        "Overclock",
+        "Powersave"
       ],
       "selected": "Performance",
       "overrides": {}
