--- a/Emu/EASYRPG/config.json
+++ b/Emu/EASYRPG/config.json
@@ -13,7 +13,8 @@
       "options": [
         "Smart",
         "Performance",
-        "Overclock"
+        "Overclock",
+        "Powersave"
       ],
       "selected": "Smart",
       "overrides": {}
